--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,8 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+#pool:
+#  vmImage: 'ubuntu-latest'
 pool:
   vmImage: 'vs2017-win2016' # examples of other options: 'macOS-10.14', 'vs2017-win2016'
 
